fix: adjust style on img preview to not overlap link URL

--- a/src/components/inputs/upload-input-v2/index.less
+++ b/src/components/inputs/upload-input-v2/index.less
@@ -90,8 +90,9 @@ div.filepicker.disabled {
 
     .file-preview {
       img {
-        max-width: 150px;
+        max-width: 110px;
         max-height: 100px;
+        object-fit: contain;
         width: auto;
         height: 100px;
         padding: 1em;
